Places public API WIP
